# router

./: Cargo.toml  DEVELOPMENT.md  QUICKSTART.md  docker-compose.yml
.circleci/: config.yml
crates/apollo-router/: Cargo.toml
crates/apollo-router-benchmarks/: Cargo.toml
crates/apollo-router-benchmarks/benches/: basic_composition.rs
crates/apollo-router-core/: Cargo.toml
crates/apollo-router-core/src/: extensions.rs  federated.rs  lib.rs
crates/apollo-router/src/: graph_factory.rs  http_server_factory.rs  http_subgraph.rs  lib.rs
crates/apollo-router/src/configuration/: mod.rs
crates/apollo-router/src/configuration/otlp/: grpcio.rs  mod.rs  tonic.rs
crates/apollo-router/src/configuration/testdata/: config_opentelemetry_otlp_tracing_tonic_basic.yml
docs/: gatsby-config.js
docs/source/quickstart/: docker.mdx  helloworld.mdx  nodejs.mdx  studio.mdx
examples/docker-compose/: README.md  docker-compose.yml
examples/hello-world/: README.md
examples/nodejs/: README.md
examples/quickstart/: README.md
xtask/: Cargo.toml
xtask/src/commands/: test.rs
xtask/src/commands/package/: macos.rs
