[package]
name = "apollo-router-benchmarks"
version = "0.1.0-alpha.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
edition = "2018"
license-file = "./LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
apollo-router-core = { path = "../apollo-router-core", features = ["post-processing"] }
criterion = { version = "0.3", features = ["async_tokio", "async_futures"] }
futures = "0.3.17"
once_cell = "1"
serde_json = { version = "1.0.70", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }


[[bench]]
name = "basic_composition"
harness = false
